fix footer spacing

--- a/wp-content/themes/wp-a11y-day/style.css
+++ b/wp-content/themes/wp-a11y-day/style.css
@@ -1069,7 +1069,7 @@ footer .widget {
     background: #fff;
     max-width: 100%;
     padding: 20px;
-	text-align: right;
+	margin-top: 50px;
 }
 
 #bottom-credits .wrap {
